[package]
name = "rust-tui-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
crossterm = { version = "0.26.1", features = ["serde"] }
rand = { version = "0.8.5", features = ["std"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
thiserror = "1.0.40"
tui = { package = "ratatui", version = "0.20.0", features = ["crossterm", "serde"] }
